--- a/src/framework/spring/spring/事务管理.md
+++ b/src/framework/spring/spring/事务管理.md
@@ -1,14 +1,19 @@
 ## 事务管理
-事务必须服从ACID原则。ACID是原子性（atomicity）、一致性（consistency）、隔离性 （isolation）和持久性（durability）的缩写。
+事务必须服从ACID原则。
+
+ACID是原子性（atomicity）、一致性（consistency）、隔离性 （isolation）和持久性（durability）的缩写。
 
 事务的原子性：表示事务执行过程中的任何失败都将导致事务所做的任何修改失效。 
 事务的一致性：表示当事务执行失败时，所有被该事务影响的数据都应该恢复到事务执行前的状态。 
 事务的隔离性：表示在事务执行过程中对数据的修改，在事务提交之前对其他事务不可见。 
 事务的持久性：表示已提交的数据在事务执行失败时，数据的状态都应该正确。
 
-通俗的理解，事务是一组原子操作单元，从数据库角度说，就是一组SQL指令，要么全部执行成功，若因为某个原因其中一条指令执行有错误，则撤销先前执行过的所有指令。更简答的说就是：`要么全部执行成功，要么撤销不执行` `控制数据的安全访问`
+通俗的理解，事务是一组原子操作单元，从数据库角度说，就是一组SQL指令，要么全部执行成功，若因为某个原因其中一条指令执行有错误，则撤销先前执行过的所有指令。
+
+更简答的说就是：`要么全部执行成功，要么撤销不执行` `控制数据的安全访问`
 
 ### 事务类型
+
 JDBC事务，JTA（Java Transaction API），容器事务
 
 
@@ -46,6 +51,7 @@ public interface TransactionDefinition {
 ```
 
 #### 7种传播行为：
+
 > 事务传播行为（propagation behavior）指的就是当一个事务方法被另一个事务方法调用时，这个事务方法应该如何进行。
 
 PROPAGATION_REQUIRED：如果当前没有事务，就新建一个事务，如果已经存在一个事务中，加入到这个事务中。这是最常见的选择。
@@ -62,7 +68,8 @@ PROPAGATION_NEVER：以非事务方式执行，如果当前存在事务，则抛
 
 虽然有7种，但是常用的就第一种PROPAGATION_REQUIRED和第四种PROPAGATION_REQUIRES_NEW
 
-#### 五个隔离级别：  
+#### 五个隔离级别：
+
 ISOLATION_DEFAULT：这是一个PlatfromTransactionManager默认的隔离级别，使用数据库默认的事务隔离级别.
 
 另外四个与JDBC的隔离级别相对应；  
