--- a/src/framework/spring/springmvc/拦截器过滤器监听器.md
+++ b/src/framework/spring/springmvc/拦截器过滤器监听器.md
@@ -1,4 +1,4 @@
-![](../../resources/java/filters.png)
+<!-- ![](../../resources/java/filters.png) -->
 
 1，拦截器的概念
     java里的拦截器是动态拦截Action调用的对象，它提供了一种机制可以使开发者在一个Action执行的前后执行一段代码，也可以在一个Action
