--- a/src/linux/docker/镜像.md
+++ b/src/linux/docker/镜像.md
@@ -208,10 +208,7 @@ docker rmi [OPTIONS] IMAGE [IMAGE...]
 docker save [OPTIONS] IMAGE [IMAGE...]
 
 # 保存镜像
-docker save -o my_ubuntu_v3.tar runoob/ubuntu:v3
-
-## 加载镜像文件
-docker load < busybox.tar.gz
+docker save -o filename.tar.gz images:tag
 ```
 
 * -o :输出到的文件
@@ -222,6 +219,9 @@ docker load < busybox.tar.gz
 
 ```shell
 docker load [OPTIONS]
+
+## 加载镜像文件
+docker load < filename.tar.gz
 ```
 * --input , -i : 指定导入的文件，代替 STDIN。
 * --quiet , -q : 精简输出信息
