--- a/src/java/base/关键字.md
+++ b/src/java/base/关键字.md
@@ -77,3 +77,14 @@ public abstract class AbstractClassName{
 
 * 如果一个类包含抽象方法，那么该类必须是抽象类。
 * 任何子类必须重写父类的抽象方法，或者声明自身为抽象类
+
+
+## super
+
+是一个指代变量，用于在子类中指代父类对象
+
+三种使用情况:
+
+* 访问父类的方法
+* 调用父类构造方法
+* 访问父类中的隐藏成员变量
