--- a/src/framework/spring/springmvc/简介.md
+++ b/src/framework/spring/springmvc/简介.md
@@ -2,7 +2,7 @@
 title: '简介'
 ---
 
-## MVC
+## MVC 模型
 
 Model - View - Controller（模型-视图-控制器）
 
@@ -20,3 +20,336 @@ Model - View - Controller（模型-视图-控制器）
 * 异常统一处理
 * 拦截器
 * 国际化
+
+## Model
+
+视图渲染时，需要对模型数据进行读取，模型数据是Map结构的
+
+### 相关类型
+
+#### Map
+
+#### Model
+
+对模型数据操作的抽象，该接口提供了添加属性、合并属性、判断属性是否存在等方法
+
+```java
+public interface Model {
+    Model addAttribute(String attributeName, @Nullable Object attributeValue);
+    Model addAttribute(Object attributeValue);
+    Model addAllAttributes(Collection<?> attributeValues);
+    Model addAllAttributes(Collection<?> attributeValues);
+    Model addAllAttributes(Map<String, ?> attributes);
+    Model mergeAttributes(Map<String, ?> attributes);
+    boolean containsAttribute(String attributeName);
+    Object getAttribute(String attributeName);
+    Map<String, Object> asMap();
+}
+```
+
+#### ModelMap
+
+使用put方法实现Model属性的添加操作
+
+```java
+public class ModelMap extends LinkedHashMap<String, Object> {
+    // 添加属性
+    public ModelMap addAttribute(String attributeName, @Nullable Object attributeValue) {
+		Assert.notNull(attributeName, "Model attribute name must not be null");
+		put(attributeName, attributeValue);
+		return this;
+	}
+}
+```
+
+#### RedirectAttributes
+
+为重定向传递参数，使用addFlashAttribute添加重定向可以使用的Model参数
+
+```java
+public interface RedirectAttributes extends Model {
+    RedirectAttributes addFlashAttribute(String attributeName, @Nullable Object attributeValue);
+}
+
+// 实现类
+public class RedirectAttributesModelMap extends ModelMap implements RedirectAttributes {
+    @Nullable
+	private final DataBinder dataBinder;
+
+    private final ModelMap flashAttributes = new ModelMap();
+    
+    @Override
+	public RedirectAttributes addFlashAttribute(String attributeName, @Nullable Object attributeValue) {
+		this.flashAttributes.addAttribute(attributeName, attributeValue);
+		return this;
+	}
+}
+```
+
+### 如何使用
+
+#### Map
+
+```java
+// 案例
+@RequestMapping
+public void mapModelBinding(Map<String, Object> map) {
+    // 声明 Map，传入的参数是 ExtendedModelMap
+    map.put("k", "v");
+}
+
+// ExtendedModelMap
+public class ExtendedModelMap extends ModelMap implements Model {
+    @Override
+	public ExtendedModelMap addAttribute(String attributeName, @Nullable Object attributeValue) {
+		super.addAttribute(attributeName, attributeValue);
+		return this;
+    }
+
+// super.addAttribute(attributeName, attributeValue); 方法调用的内容
+
+    // public ModelMap addAttribute(String attributeName, @Nullable Object attributeValue) {
+	// 	Assert.notNull(attributeName, "Model attribute name must not be null");
+	// 	put(attributeName, attributeValue);
+	// 	return this;
+	// }
+    
+    @Override
+	public Map<String, Object> asMap() {
+		return this;
+	}
+}
+```
+
+#### ModelMap
+
+```java
+@RequestMapping
+public void modelMapModelBinding(ModelMap modelMap) {
+    // 声明 modelMap，传入的参数是 ExtendedModelMap
+    modelMap.addAttribute("k", "v");
+    modelMap.put("k", "v");
+}
+```
+
+#### Model
+
+```java
+// 案例
+@RequestMapping
+public void modelModelBinding(Model model) {
+    // 声明 model，传入的参数是 ExtendedModelMap
+    model.addAttribute("k", "v");
+}
+```
+
+#### 创建 Model
+
+```java
+// 案例
+@RequestMapping
+public void createModelBinding() {
+    Map map = new HashMap();
+    ModelMap modelMap = new ModelMap();
+    ModelMap modelMap2 = new ExtendedModelMap();
+}
+```
+
+#### @ModelAttribute
+
+```java
+@RequestMapping
+public void modelAttribute(@ModelAttribute javaBean b) {
+}
+```
+
+#### ModelAndView
+
+```java
+@RequestMapping
+public ModelAndView modelAndView() {
+    Map map = new HashMap();
+    map.put("k", "v");
+    return new ModelAndView("viewName", map);
+}
+```
+
+## View
+
+`org.springframework.web.servlet.view` 封装了所有视图的实现，通过接口的 `render` 方法，依据传入的 `Model`,
+对视图文件进行渲染并写入到 `Response` 来完成处理过程
+
+```java
+public interface View {
+    String RESPONSE_STATUS_ATTRIBUTE = View.class.getName() + ".responseStatus";
+    String PATH_VARIABLES = View.class.getName() + ".pathVariables";
+    String SELECTED_CONTENT_TYPE = View.class.getName() + ".selectedContentType";
+    default String getContentType() {
+		return null;
+	}
+
+    void render(@Nullable Map<String, ?> model, HttpServletRequest request, HttpServletResponse response)
+			throws Exception;
+}
+```
+
+### 视图类型
+
+#### InternalResourceView 内部资源视图
+
+代表内部的资源
+
+使用场景:
+* 访问静态资源
+* 访问JSP视图
+* 转发视图 `forward:视图`
+
+#### RedirectView 重定向视图
+
+通过向浏览器返回状态 `302`，并设置响应头的 `Location` 为需要重定向的地址
+
+
+```java
+return redirect:视图;
+```
+
+#### 模板引擎视图
+
+设计目的为了是页面的静态内容和页面的动态内容分离
+
+
+### 视图解析
+
+#### BeanName 视图解析
+
+使用 `BeanNameViewResolver` 根据视图名称来查找 spring 容器中的Bean view
+
+#### 模板引擎视图解析
+
+各个模板引擎拥有自己的视图解析器
+
+* MappingJackson2JsonView
+* FreeMarkerViewResolver
+* GroovyMarkupViewResolver
+
+
+## Controller
+
+### 查找
+
+#### 直接URL映射
+向 spring 容器中注册 `SimpleUrlHandlerMapping` 类型的Bean 实现。
+
+传入Map
+* Map的key为URL,支持通配符
+* Value 是任意一种支持的H andler
+
+```java
+// 案例
+@Configuration
+public class HandlerMappingURL {
+
+    @Bean
+    public SimpleUrlHandlerMapping simpleUrlHandlerMapping() {
+        SimpleUrlHandlerMapping mapping = new SimpleUrlHandlerMapping();
+        // 高优先级
+        mapping.setOrder(Ordered.HIGHEST_PRECEDENCE);
+        // HttpRequestHandlerImpl 为自定义处理器
+        mapping.setUrlMap(Collections.singletonMap("/url", new HttpRequestHandlerImpl()));
+        return mapping;
+    }
+}
+```
+
+#### BeanName 和 URL 映射
+
+```java
+// 案例
+@Configuration
+public class HandlerMappingURL {
+    @Bean(name = {"/beanNameURL"})
+    public HttpRequestHandler httpRequestHandler() {
+        // Handler 实现类
+        return new BeanNameUrlHandler();
+    }
+```
+
+#### @RequestMapping 映射
+
+### 处理器 Handler
+
+> Handler [ˈhændlə(r)]
+
+#### HttpRequestHandler
+
+```java
+// 接口定义
+@FunctionalInterface
+public interface HttpRequestHandler {
+	void handleRequest(HttpServletRequest request, HttpServletResponse response)
+			throws ServletException, IOException;
+
+}
+
+// 实现接口
+@Service
+public class HttpRequestHandlerImpl implements HttpRequestHandler {
+    @Override
+    public void handleRequest(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+        // TODO
+    }
+}
+```
+
+#### Controller
+
+```java
+@FunctionalInterface
+public interface Controller {
+	@Nullable
+	ModelAndView handleRequest(HttpServletRequest request, HttpServletResponse response) throws Exception;
+}
+```
+
+#### @RequestMapping 定义的方法
+
+通过 `RequestMappingHandlerMapping` 查找满足条件的@RequestMapping注解，然后将该注解标记的方法封装为 `HandlerMehtod`.
+
+`HandlerMehtod` 中包含该方法所在Bean及
+
+### 拦截器
+
+```java
+// 通过实现 HandlerInterceptor 接口
+public interface HandlerInterceptor {
+    default boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler)
+			throws Exception {
+
+		return true;
+    }
+    
+    default void postHandle(HttpServletRequest request, HttpServletResponse response, Object handler,
+			@Nullable ModelAndView modelAndView) throws Exception {
+    }
+    
+    default void afterCompletion(HttpServletRequest request, HttpServletResponse response, Object handler,
+			@Nullable Exception ex) throws Exception {
+	}
+}
+```
+
+1. 执行处理器前，先执行 `preHandle` 方法
+
+* 返回 `false`, 则中断请求流程
+* 返回 `true`, 继续执行后续的拦截器，直到所有的拦截器都返回 `true` ,才执行处理器方法
+
+2. 执行完成后
+
+* 正常执行完毕后，先执行 `postHandle` 方法, 在执行 `afterCompletion` 方法
+* 发生了异常，直接执行 `afterCompletion` 方法
+
+### 拦截器个过滤器的区别
+
+1. 过滤器在执行在 servlet 执行前，先过滤器，在拦截器
+2. 过滤器只只对URL，通过URL模式匹配判断是否执行过滤器。拦截器不仅仅需要根据请求的URL进行模式匹配，还要求存在对此请求进行处理的处理器。
+3. 拦截器可以拿到springmvc 体系的 Handler和ModelAndView 等中间产物。过滤器是原生的Servlet标准组件
