--- a/src/framework/spring/springmvc/简介.md
+++ b/src/framework/spring/springmvc/简介.md
@@ -348,7 +348,7 @@ public interface HandlerInterceptor {
 * 正常执行完毕后，先执行 `postHandle` 方法, 在执行 `afterCompletion` 方法
 * 发生了异常，直接执行 `afterCompletion` 方法
 
-### 拦截器个过滤器的区别
+### 拦截器和过滤器的区别
 
 1. 过滤器在执行在 servlet 执行前，先过滤器，在拦截器
 2. 过滤器只只对URL，通过URL模式匹配判断是否执行过滤器。拦截器不仅仅需要根据请求的URL进行模式匹配，还要求存在对此请求进行处理的处理器。
