--- a/src/framework/spring/springboot/简介.md
+++ b/src/framework/spring/springboot/简介.md
@@ -75,7 +75,7 @@ import org.springframework.boot.autoconfigure.*;
 import org.springframework.web.bind.annotation.*;
 
 @RestController
-@EnableAutoConfiguration
+@SpringBootApplication
 public class Example {
 
     @RequestMapping("/")
