--- a/src/framework/spring/springboot/基本特性.md
+++ b/src/framework/spring/springboot/基本特性.md
@@ -2,26 +2,19 @@
 title: '基本特性'
 ---
 
+## Runner类
 
-## Runner 类
-
-用于在spring boot 启动时执行任务
+用于在 spring boot 启动后执行任务
 
 ### ApplicationRunner
 
 ```java
 @FunctionalInterface
 public interface ApplicationRunner {
-
-	/**
-	 * Callback used to run the bean.
-	 * @param args incoming application arguments
-	 * @throws Exception on error
-	 */
 	void run(ApplicationArguments args) throws Exception;
-
 }
 
+// 方式一
 public class A implements ApplicationRunner {
     @Override
     public void run(ApplicationArguments args) throws Exception {
@@ -33,6 +26,13 @@ public class A implements ApplicationRunner {
 ### CommandLineRunner
 
 ```java
+@FunctionalInterface
+public interface CommandLineRunner {
+	void run(String... args) throws Exception;
+
+}
+
+// 方式二
 class B implements CommandLineRunner {
     @Override
     public void run(String... args) throws Exception {
