--- a/src/framework/spring/springboot/自动配置.md
+++ b/src/framework/spring/springboot/自动配置.md
@@ -140,7 +140,7 @@ public class AutoConfigurationImportSelector implements DeferredImportSelector, 
 
 > `META-INF/spring.factories` 用来加载外部jar的配置
 
-```factories
+```properties
 // 注解
 org.springframework.boot.autoconfigure.EnableAutoConfiguration=\
 // redis 自动配置
