--- a/src/framework/spring/springboot/常用注解.md
+++ b/src/framework/spring/springboot/常用注解.md
@@ -142,6 +142,31 @@ public @interface Inherited {
 ```
 
 ## spring
+
+### @Autowired
+
+`@Autowired` 默认按类型匹配的方式，在容器查找匹配的Bean，当有且仅有一个匹配的Bean时，Spring将其注入@Autowired标注的变量中
+
+### @Service
+### @Component
+### @Configuration
+### @PostConstruct
+### @PreDestory
+### @Async
+### @Lazy(true)
+
+## spring mvc
+### @Controller
+### @Scope
+### @ResponseBody
+### @RequestMapping
+### @ModelAttribute
+### @PathVariable
+### @Repository
+### @RequestHeader
+### @ExceptionHandler
+### @ControllerAdvice
+
 ## springboot
 
 ### @SpringBootApplication
