--- a/src/algorithm/structure/tree/树.md
+++ b/src/algorithm/structure/tree/树.md
@@ -1,3 +1,21 @@
 ---
 title: '树'
 ---
+
+## 二叉树
+
+每个节点关联的子节点至多有两个
+
+左子树键值小于根的键值，右字数的键值大于根的键值
+
+## 平衡二叉树
+
+满足二叉树的定义，且满足任何节点的两个子树的高度最大差为一
+
+## B树
+
+为磁盘或其他直接存取的辅助存储设备而设计的一种平衡搜索树
+
+## B+树
+
+所有记录节点都是按键值的大小顺序存放在同一层的叶子节点上，由各叶子节点指针进行连接
