--- a/src/job/分布式.md
+++ b/src/job/分布式.md
@@ -15,3 +15,26 @@ title: '分布式面试题'
 * Basically Available（基本可用）
 * Soft state（软状态）
 * Eventually consistent（最终一致性）
+
+
+### 分布式ID
+
+* 唯一性：确保生成的ID是全网唯一的。
+* 有序递增性：确保生成的ID是对于某个用户或者业务是按一定的数字有序递增的。
+* 高可用性：确保任何时候都能正确的生成ID。
+* 带时间：ID里面包含时间，一眼扫过去就知道哪天的交易
+
+1. 数据库自增ID
+
+业务系统每次需要一个ID时，都需要请求数据库获取，性能低，并且如果此数据库实例下线了，那么将影响所有的业务系统
+
+2. UUID
+
+没有排序，无法保证趋势递增。
+UUID往往是使用字符串存储，查询的效率比较低
+
+3. 雪花算法
+
+4. Redis生成ID
+
+incr 和 increby 这样的自增原子命令
