--- a/src/job/算法.md
+++ b/src/job/算法.md
@@ -110,3 +110,23 @@ O(n平方)
 ### 希尔排序
 
 是对直接插入排序进行的一种改进排序算法，采用跳跃分割的方法，将整个待排序列分割成若干个子序列，对这些子序列进行直接插入排序，使其得到的结果基本有序，然后再不断缩减分割的区间，使其完全有序
+
+## 算法
+
+### 数字反转
+
+1. `%10` 取余数，得到最低位
+2. `/10` 降低位数
+3. 重复 1.2
+
+```java
+static void reverse(int a) {
+    int rs = 0;
+    while (a > 0) {
+        rs *= 10;
+        rs += a % 10;
+        a /= 10;
+    }
+    System.out.println(rs);
+}
+```
