--- a/src/job/算法.md
+++ b/src/job/算法.md
@@ -111,6 +111,14 @@ O(n平方)
 
 是对直接插入排序进行的一种改进排序算法，采用跳跃分割的方法，将整个待排序列分割成若干个子序列，对这些子序列进行直接插入排序，使其得到的结果基本有序，然后再不断缩减分割的区间，使其完全有序
 
+### 外排序
+
+外排序采用分块的方法（分而治之），首先将数据分块，对块内数据按选择一种高效的内排序策略进行排序。然后采用归并排序的思想对于所有的块进行排序，得到所有数据的一个有序序列
+
+1. 采用适当的内部排序方法对输入文件的每个片段进行排序，将排好序的片段（成为归并段）写到外部存储器中（通常由一个可用的磁盘作为临时缓冲区），这样临时缓冲区中的每个归并段的内容是有序的
+
+2. 利用归并算法，归并第一阶段生成的归并段，直到只剩下一个归并段为止
+
 ## 算法
 
 ### 数字反转
