--- a/src/job/算法.md
+++ b/src/job/算法.md
@@ -138,3 +138,14 @@ static void reverse(int a) {
     System.out.println(rs);
 }
 ```
+
+## 数据结构
+
+### 堆和栈
+
+#### 空间分配的区别
+
+#### 数据结构的区别
+
+堆：可以被看成是一颗树
+栈: 先进后出
