--- a/src/job/网络协议.md
+++ b/src/job/网络协议.md
@@ -8,7 +8,7 @@ title: '网络协议'
 
 客户端收到服务的释放连接的请求后，不是立马进入CLOSE状态，而是还要再等待 2MSL（msl 报文最大生存时间）。
 
-理由是: 
+理由是:
 * 确保最后一个确认报文能够到达。如果没能到达，服务端就会会重发FIN请求释放连接。等待一段时间没有收到重发就说明服务的已经CLOSE了。如果有重发，则客户端再发送一次LAST ack信号
 * 等待一段时间是为了让本连接持续时间内所产生的所有报文都从网络中消失，使得下一个新的连接不会出现旧的连接请求报文
 
@@ -43,6 +43,7 @@ tcp 面向连接，udp 面向非连接即发送数据前不需要建立链接；
 tcp 提供可靠的服务（数据传输），udp 无法保证；
 tcp 面向字节流，udp 面向报文；
 tcp 数据传输慢，udp 数据传输快；
+
 ### tcp 为什么要三次握手，两次不行吗？为什么？
 
 如果采用两次握手，那么只要服务器发出确认数据包就会建立连接，但由于客户端此时并未响应服务器端的请求，那此时服务器端就会一直在等待客户端，这样服务器端就白白浪费了一定的资源。若采用三次握手，服务器端没有收到来自客户端的再此确认，则就会知道客户端并没有要求建立请求，就不会浪费服务器的资源
@@ -62,3 +63,15 @@ tcp 数据传输慢，udp 数据传输快；
 * 服务器端运行跨域 设置 CORS 等于 *；
 
 * 在单个接口使用注解 @CrossOrigin 运行跨域；
+
+
+### 从输入URL到页面展示的详细过程
+
+1. 输入网址
+2. DNS解析
+3. 建立tcp连接
+4. 客户端发送HTPP请求
+5. 服务器处理请求
+6. 服务器响应请求
+7. 浏览器展示HTML
+8. 浏览器发送请求获取其他在HTML中的资源
