--- a/src/job/分布式.md
+++ b/src/job/分布式.md
@@ -75,3 +75,7 @@ incr 和 increby 这样的自增原子命令
 服务层：负载均衡，分级管理，快速失败（超时设置），异步调用，服务降级，幂等设计等。
 
 数据层：冗余备份（冷，热备[同步，异步]，温备），失效转移（确认，转移，恢复）。数据高可用方面著名的理论基础是 CAP 理论。（持久性，可用性，数据一致性[强一致，用户一致，最终一致]）
+
+### 分布式一致性
+
+Paxos
