--- a/src/job/算法.md
+++ b/src/job/算法.md
@@ -149,3 +149,21 @@ static void reverse(int a) {
 
 堆：可以被看成是一颗树
 栈: 先进后出
+
+### 分治法
+
+将一个难以直接解决的大问题，分割成一些规模较小的相同问题，以便各个击破，分而治之
+
+### 反转链表
+
+* 迭代反转链表
+
+从当前链表的首元节点开始，一直遍历至链表的最后一个节点，这期间会逐个改变所遍历到的节点的指针域，另其指向前一个节点
+
+* 递归反转链表
+
+递归反转法的实现思想是从链表的尾节点开始，依次向前遍历，遍历过程依次改变各节点的指向，即另其指向前一个节点
+
+* 头插法反转链表
+
+所谓头插法，是指在原有链表的基础上，依次将位于链表头部的节点摘下，然后采用从头部插入的方式生成一个新链表
