--- a/src/job/分布式.md
+++ b/src/job/分布式.md
@@ -79,3 +79,94 @@ incr 和 increby 这样的自增原子命令
 ### 分布式一致性
 
 Paxos
+
+### 消息队列选型
+
+在实际生产应用中，通常会使用kafka作为**消息传输的数据管道**，rabbitmq作为交易数据作为**数据传输管道**，主要的取舍因素则是是否存在丢数据的可能；
+rabbitmq 在金融场景中经常使用，具有较高的严谨性，数据丢失的可能性更小，同事具备更高的实时性；
+而kafka优势主要体现在吞吐量上，虽然可以通过策略实现数据不丢失，但从严谨性角度来讲，大不如rabbitmq；
+而且由于kafka保证每条消息最少送达一次，有较小的概率会出现数据重复发送的情况
+
+## rabbitmq
+
+### 使用RabbitMQ有什么好处？
+
+1. 解耦，系统A在代码中直接调用系统B和系统C的代码，如果将来D系统接入，系统A还需要修改代码，过于麻烦！
+
+2. 异步，将消息写入消息队列，非必要的业务逻辑以异步的方式运行，加快响应速度
+
+3. 削峰，并发量大的时候，所有的请求直接怼到数据库，造成数据库连接异常
+
+### channel、exchange 和 queue
+
+queue 具有自己的 erlang 进程；exchange 内部实现为保存 binding 关系的查找表；channel 是实际进行路由工作的实体，即负责按照 routing_key 将 message 投递给 queue
+
+### vhost 是什么？起什么作用？
+
+可以理解为虚拟 broker。其内部均含有独立的 queue、exchange 和 binding 等，但最最重要的是，其拥有独立的权限系统，可以做到 vhost 范围的用户控制
+
+### 消息基于什么传输？
+
+RabbitMQ使用信道的方式来传输数据。信道是建立在真实的TCP连接内的虚拟连接，且每条TCP连接上的信道数量没有限制
+
+由于TCP连接的创建和销毁开销较大，且并发数受系统资源限制，会造成性能瓶颈。
+
+### 常用的交换器
+
+* Direct
+
+直连型交换机，根据消息携带的路由键将消息投递给对应队列
+大致流程，
+1. 有一个队列绑定到一个直连交换机上，同时赋予一个路由键 routing key
+2. 然后当一个消息携带着路由值为X，这个消息通过生产者发送给交换机时，交换机就会根据这个路由值X去寻找绑定值也是X的队列
+
+* Fanout
+
+交换机在接收到消息后，会直接转发到绑定到它上面的所有队列
+
+* Topic
+
+使用topic交换器时，可以使用通配符，比如：“*” 匹配特定位置的任意文本， “.” 把路由键分为了几部分，“#” 匹配所有规则等
+
+可以使来自不同源头的消息能够到达同一个队列
+
+### 队列类型
+
+1. Work queues(工作队列)
+
+作队列的主要思想就是将资源密集型的任务分配给多个终端处理，可以理解为轮询机制
+
+2. Publish/Subscribe(发布/订阅)
+
+将生产者发布的消息以广播的形式发送给所有消费者
+
+3. Routing(路由)
+4. Topics(通配符)
+
+### 如何解决丢数据的问题?
+
+1. 生产者丢数据
+
+RabbitMQ提供 `transaction` 和 `confirm` 模式来确保生产者不丢消息
+
+#### transaction
+
+transaction机制就是说，发送消息前，开启事物(channel.txSelect())，然后发送消息，如果发送过程中出现什么异常，事物就会回滚(channel.txRollback())，如果发送成功则提交事物(channel.txCommit())
+
+#### confirm
+
+一旦channel进入confirm模式，所有在该信道上面发布的消息都将会被指派一个唯一的ID(从1开始)，一旦消息被投递到所有匹配的队列之后，rabbitMQ就会发送一个Ack给生产者(包含消息的唯一ID)，这就使得生产者知道消息已经正确到达目的队列了
+
+2. 消息队列丢数据
+
+开启持久化磁盘的配置
+
+3. 消费者丢数据
+
+①自动确认模式，消费者挂掉，待ack的消息回归到队列中。消费者抛出异常，消息会不断的被重发，直到处理成功。不会丢失消息，即便服务挂掉，没有处理完成的消息会重回队列，但是异常会让消息不断重试。
+
+②手动确认模式，如果消费者来不及处理就死掉时，没有响应ack时会重复发送一条信息给其他消费者；如果监听程序处理异常了，且未对异常进行捕获，会一直重复接收消息，然后一直抛异常；如果对异常进行了捕获，但是没有在finally里ack，也会一直重复发送消息(重试机制)。
+
+③不确认模式，acknowledge="none" 不使用确认机制，只要消息发送完成会立即在队列移除，无论客户端异常还是断开，只要发送完就移除，不会重发
+
+### 死信队列和延迟队列的使用
