--- a/src/patterns/behavior/策略模式.md
+++ b/src/patterns/behavior/策略模式.md
@@ -3,6 +3,9 @@ title: '策略模式'
 ---
 
 ## 定义
+
+对一系列的算法加以封装，为所有算法定义一个抽象的算法接口，并通过继承该抽象算法接口对所有的算法加以封装和实现，具体的算法选择交由客户端决定
+
 该模式定义了一系列算法，并将每个算法封装起来，使它们可以相互替换，且算法的变化不会影响使用算法的客户
 
 优点:
