--- a/src/patterns/behavior/职责链模式.md
+++ b/src/patterns/behavior/职责链模式.md
@@ -4,6 +4,8 @@ title: '职责链模式'
 
 ## 定义
 
+构造一系列分别担当不同的职责的类的对象来共同完成一个任务
+
 为了避免请求发送者与多个请求处理者耦合在一起，将所有请求的处理者通过前一对象记住其下一个对象的引用而连成一条链；
 当有请求发生时，可将请求沿着这条链传递，直到有对象处理它为止
 
