--- a/src/java/hc/高并发.md
+++ b/src/java/hc/高并发.md
@@ -2,6 +2,8 @@
 title: '高并发'
 ---
 
+## 高并发
+
 > 高并发：在极短单位时间内，极多个请求同时发起到服务器
 解决思路:
 1.换固态硬盘加快硬盘的读写效率。
@@ -9,7 +11,7 @@ title: '高并发'
 3.将硬盘的读写或者数据的计算分摊到多台机器上，也就是集群。
 4.良好的查询算法，降低读的次数，分表，分库，索引等都是基于这层面的
 
-#### 指标
+### 指标
 * 响应时间(RT)
 响应时间是指系统对请求作出响应的时间
 * 吞吐量(Throughput)
@@ -18,3 +20,7 @@ title: '高并发'
 并发用户数是指系统可以同时承载的正常使用系统功能的用户的数量
 * QPS每秒查询率(Query Per Second)
 QPS: 每秒钟处理完请求的次数
+
+## 知识图谱
+
+![](../../resources/java/hc/Java.png)
