--- a/src/job/算法.md
+++ b/src/job/算法.md
@@ -167,3 +167,8 @@ static void reverse(int a) {
 * 头插法反转链表
 
 所谓头插法，是指在原有链表的基础上，依次将位于链表头部的节点摘下，然后采用从头部插入的方式生成一个新链表
+
+
+### ziplist
+
+ziplist是由一系列特殊编码的连续内存块组成的顺序存储结构，类似于数组
