云服务模型

--- a/src/job/分布式.md
+++ b/src/job/分布式.md
@@ -249,3 +249,29 @@ Seata 的 JDBC 数据源代理通过对业务 SQL 的解析，把业务数据在
 流程
 
 Seata的全局事务是基于XID和 Branch ID，主要通过feign把xid在各服务之间传递，而通过xid+branchId唯一确定一条undo_log数据（此时是阶段一，因为已经插入一条undo_log了），拿 UNDO LOG 中的后镜与当前数据进行比较，如果有不同，说明数据被当前全局事务之外的动作做了修改（此时是阶段二）
+
+
+### 云服务模型
+
+![](../resources/distributed/iaas-paas-saas-comparison-1024x759.jpg)
+
+#### Saas
+
+SaaS，Software as a service，软件即服务
+
+服务商提供一个线上服务平台，客户根据自己的实际需求订购相应服务模块。按订购的服务多少和时间长短向服务商支付费用。
+
+* 优点: 可重复使用; 成本较低; 灵活的定价模式，符合企业的发展模式; 为企业减少所需的IT资源
+* 缺点: 无法提供定制化的内容
+
+#### PaaS
+
+平台即服务,某些时候也叫做中间件
+
+为某些软件提供云组件，这些组件主要用于应用程序
+
+#### IaaS
+
+基础架构即服务
+
+IaaS公司会提供场外服务器，存储和网络硬件，你可以租用
