--- a/src/job/面经.md
+++ b/src/job/面经.md
@@ -70,7 +70,7 @@ title: '面试记录'
 
 1. 打开前端系统查看宕机的表现，发现一次正常一次失败 判断: 一些服务器挂机造成负载均衡失效
 2. 打开服务监控系统查看哪些机器挂机，发现全部在线没有异常的机器 判断: 未有服务器挂机
-3. 登录阿里云查看redis，mysql实例是否正常，发现全部正常 判断: 服务本身出了问题
+3. 登录阿里云查看redis，mysql实例是否正常，查看是否是第三方服务引起问题，发现全部正常 判断: 服务本身出了问题
 4. 从头开始排查，查看nginx日志，发现nginx实例正常，负载转发正常 判断: 非nginx原因
 5. 查看网关层A机器，系统cpu,内存,磁盘空间,实例日志，未发现异常
 6. 查看网关层B机器，cpu占满，实例日志异常不断输出 找到了问题机器，尝试重启应用节点，问题未修复
@@ -86,5 +86,7 @@ title: '面试记录'
 5. 论证升级版本的风险，版本升级，持续监控，问题解决
 
 耗时: 10-20 分钟
+
+问题复盘: 小版本升级后，未做大规模压测。减少版本升级频率
 
 ### 怎么看加班
