--- a/src/linux/command/常用命令.md
+++ b/src/linux/command/常用命令.md
@@ -151,3 +151,12 @@ less /var/log/cron.log
 ```shell
 sudo netstat -tlpn
 ```
+
+## lsof
+
+是一个列出当前系统打开文件的工具
+
+```shell
+# 打开的文件句柄数
+lsof -n|awk '{print $2}'|sort|uniq -c|sort -nr|more
+```
