--- a/src/job/面经.md
+++ b/src/job/面经.md
@@ -90,3 +90,128 @@ title: '面试记录'
 问题复盘: 小版本升级后，未做大规模压测。减少版本升级频率
 
 ### 怎么看加班
+
+
+## 欢聚集团
+
+视频面试
+
+### 自我介绍
+### 业务架构和技术架构
+### 最终一致性解决方案
+### 分布式事务
+### 秒杀系统怎么设计
+
+* 静态资源放入cdn服务器，oss存储
+* 前端倒计时，到时间在放出按钮，点击后按钮置灰。时间分片（验证码）
+* 限流 后端防止恶意请求，网关层限制同一ip或同一个账户访问，超过访问的限制，丢弃请求
+* 缓存热点数据，redis 主从，集群
+* 业务异步处理，消息队列
+* 拓展机器，负载均衡
+
+### 扣减库存
+### springboot启动过程
+### spring启动过程
+### 调用超时 怎么排查
+
+排查调用链
+
++ 检查网络 ping
++ 检查负载均衡，网关，各服务实例CPU,内存，磁盘
++ 检查数据库，查看慢日志
++ 检查其他中间件
+
+### redis 数据类型
+### zset 怎么实现
+
+ziplist或者skiplist
+
+### redis 选举策略
+### redis 主从方式
+
+### juc 包用过哪些
+
+ReentrantLock
+
+### 可重入锁
+
+某个线程已经获得某个锁，可以再次获取锁而不会出现死锁,
+
+加锁的时候锁对象记录当前的对象的线程
+
+### 设计模式
+### 工厂有哪些
+### 单利模式双重校验锁
+```java
+class Foo {
+    private Helper helper = null;
+    public Helper getHelper() {
+        // 判断是否已创建实例，已创建直接返回实例。不在获取锁
+        if (helper == null) {
+            synchronized(this) {
+                // 如果其他线程曾获取过锁，那么变量已被初始化，返回初始化的变量
+                if (helper == null) {
+                    helper = new Helper();
+                }
+            }
+        }
+        return helper;
+    }
+}
+```
+### starter 怎么实现的
+### springboot aop
+```xml
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-aop</artifactId>
+</dependency>
+```
+
+引入了AOP依赖后，默认已经增加了 @EnableAspectJAutoProxy 导入 AspectJAutoProxyRegistrar
+加入 @Aspect注解
+
+AspectJ是静态代理的增强，所谓的静态代理就是AOP框架会在编译阶段生成AOP代理类，因此也称为编译时增强
+
+### cas 问题
+
+ABA 添加版本号
+
+## 新移传媒
+
+电话面试
+
+### 自我介绍
+### 为什么离职
+### cpu爆，怎么排查
+
+top -Hp pid可以查看某个进程的线程信息
+print pid 转换成16进制
+jstack 
+
+### jvm 调优
+### mq 防止重复消费
+
+消费者 conform 解决 消息丢失
+记录message id 解决重复消费
+
+消息顺序
+
+### cdn
+### mysql 回表
+### 聚簇索引、非聚簇索引
+### redis 为什么快
+
+1. 完全基于内存，绝大部分请求是纯粹的内存操作
+2. 采用单线程，避免了不必要的上下文切换和竞争条件，也不存在多进程或者多线程导致的切换而消耗 CPU
+3. 使用多路I/O复用模型 epoll
+
+### redis 集群，hash环
+
+### 触发 full gc
+
+1. System.gc()
+
+2. 老年代空间不足
+
+3. 堆中分配很大的对象
