--- a/src/job/面经.md
+++ b/src/job/面经.md
@@ -217,3 +217,186 @@ jstack
 2. 老年代空间不足
 
 3. 堆中分配很大的对象
+
+## 税友
+
+### 幂等性
+
+对同一个系统，使用同样的条件，一次请求和重复的多次请求对系统资源的影响是一致的
+
+实现
+
+A请求携带一个唯一值key，B第一次访问缓存key、执行方法并缓存结果。第二次访问直接返回结果
+
+### sql 索引
+
+假设有组合索引 index(a,b,c),以下情况不考虑 select * 内容 (覆盖索引)
+
+where a = 3  用到索引 a
+
+where a = 3 and b = 3 用到索引 a,b
+
+where a = 3 and b = 4 and c = 5  用到索引 a,b,c
+
+where b = 3 或者 where b = 3 and c = 4 或者 where c = 4 索引失效
+
+where a = 3 and c = 5 用到索引 a
+
+where a = 3 and b > 4 and c = 5 用到索引a和b，c不能用在范围之后
+
+where a = 3 and b like 'kk%' and c = 4 用到索引a,b,c。
+
+where a = 3 and b like '%kk' and c = 4 使用到 a
+
+where a = 3 and b like '%kk%' and c = 4 用到 a
+
+where a = 3 and b like 'k%kk%' and c = 4 用到a,b,c
+
+切记使用索引字段值的类型必须匹配，否则索引无效。
+
+只有 where 走索引
+
+### 解析
+
+from .. on ...join ..where ..group by ...having .select dinstinct ..order by ..limit..
+
+
+
+## 河马
+
+一面：
+
+### 项目介绍
+### order by
+
+mysql两种排序方式：文件排序或扫描索引排序
+
+filesort和index，index效率高，它指mysql扫描索引本身完成排序，filesort方式效率低
+
+### 不用juc和sync实现线程安全
+
+### 分库分表
+### 分库分表 分布式事务
+### redis 数据结构 list底层
+### redis 锁，如何不重试，获取锁
+### 公平锁和非公平锁
+### feign 调用过程，如何设计
+### 反问面试官
+
+## CityDo
+
+### 项目介绍
+### spring 事务隔离,mysql 数据库默认隔离级别
+mysql8
+
+```sql
+select @@transaction_isolation;
+```
+
+set global/session transaction isolation level read committed;
+
+REPEATABLE READ
+READ COMMITTED
+READ UNCOMMITTED
+SERIALIZABLE
+
+my.ini
+
+[mysqld]
+transaction-isolation = REPEATABLE-READ
+transaction-read-only = OFF
+
+### 数据库编码
+
+utf8mb4
+
+### Sql 调优
+
+1. 使用索引
+2. 预编译
+3. 避免在索引上使用计算
+4. 尽量将多条SQL语句压缩到一句SQL中
+5. 使用表的别名
+6. 更新Update语句优化
+
+如果只更改1、2个字段，不要Update全部字段，否则频繁调用会引起明显的性能消耗，同时带来大量日志
+
+7. 插入Insert语句优化
+
+在新建临时表时，如果一次性插入数据量很大，那么可以使用 select into 代替 create table，避免造成大量 log ，以提高速度；如果数据量不大，为了缓和系统表的资源，应先create table，然后insert
+
+8. 查询select语句优化
+9. 用varchar 代替 char
+
+
+### select_type 几种类型
+
+* SIMPLE 简单的SELECT语句（不包括UNION操作或子查询操作）
+```sql
+explain select * from user where uid=1;
+```
+* PRIMARY 查询中最外层的SELECT（如两表做UNION或者存在子查询的外层的表操作为PRIMARY，内层的操作为UNION）
+* DERIVED：导出表的SELECT（FROM子句的子查询）
+```sql
+explain
+select *
+from (select max(A) from table_name)a ;
+```
+
+* UNION 第二层，在SELECT之后使用了UNION
+* UNION RESULT UNION的结果
+* DEPENDENT UNION UNION语句中的第二个SELECT，依赖于外部子查询
+```sql
+explain select * from user where uid=1 union select * from user where uid=2
+```
+
+* SUBQUERY 子查询中首个SELECT（如果有多个子查询存在）
+* DEPENDENT SUBQUERY：子查询中首个SELECT，但依赖于外层的表（如果有多个子查询存在）
+
+
+### 分布式原理
+CAP BASE
+### springboot 自动装配原理
+### redis 哪些场景使用锁
+setnx 成功，返回 1 ,失败，返回 0
+
+调度平台、扣减库存
+
+### 消息队列多消费端怎么处理，消费者注意什么
+
+设置消费端数量
+```java
+@RabbitListener(concurrency="5")
+```
+
+数据重复被消费
+
+### 消息队列使用场景，为什么选用rabbitmq
+
+1. 从社区活跃度
+2. 底层erlang实现
+3. 吞吐量
+4. 配置量小
+
+### 线程池参数，如何创建线程池
+### 生产事故
+### feign 调优
+
+1. 开启熔断
+2. 配置连接时间、超时时间，最大连接数
+3. 使用okhttp客户端，配置连接池
+4. 请求日志 Logger.Level
+5. 请求、返回数据压缩gzip
+
+### feign 调用过程
+
+1. 基于面向接口的动态代理方式生成实现类
+2. 根据Contract协议规则，解析接口类的注解信息，解析成内部表现
+3. 基于 RequestBean，动态生成Request
+4. 使用Encoder 将Bean转换成 Http报文正文
+5. 拦截器负责对请求和返回进行装饰处理
+6. 日志记录
+7. 基于重试器发送HTTP请求
+8. 发送Http请求
+
+### 链路跟踪什么原理
