--- a/src/job/面经.md
+++ b/src/job/面经.md
@@ -289,23 +289,6 @@ filesort和index，index效率高，它指mysql扫描索引本身完成排序，
 ### spring 事务隔离,mysql 数据库默认隔离级别
 mysql8
 
-```sql
-select @@transaction_isolation;
-```
-
-set global/session transaction isolation level read committed;
-
-REPEATABLE READ
-READ COMMITTED
-READ UNCOMMITTED
-SERIALIZABLE
-
-my.ini
-
-[mysqld]
-transaction-isolation = REPEATABLE-READ
-transaction-read-only = OFF
-
 ### 数据库编码
 
 utf8mb4
@@ -400,3 +383,33 @@ setnx 成功，返回 1 ,失败，返回 0
 8. 发送Http请求
 
 ### 链路跟踪什么原理
+
+
+## 有赞
+
+一面
+
+### 自我介绍
+### 离职原因
+### 秒杀场景
+
+缓存商品库存数据到redis中，预减库存，将扣减库存成功的放入消息队列处理订单创建，通过websocket通知前端下单成功
+
+付款完成后扣减数据库库存，付款倒计时，超出时间库存放回
+
+redis 采用主从、集群防止宕机
+
+采用分区扣减，每台机器都存储一部分库存数据，使用负载均衡算法解决数据倾斜
+
+
+网关层限流 记录访问次数，超过丢弃
+
+### 负载均衡
+轮询、权重、hash、取模运算
+### redis 集群复制过程
+### jvm 模型
+### gc 算法
+### 垃圾回收器
+### spring 初始化 Bean
+### ioc 实现原理
+### aop 代理区别，使用场景
