--- a/src/framework/mybatis/mybatis/扩展.md
+++ b/src/framework/mybatis/mybatis/扩展.md
@@ -17,3 +17,31 @@ logging.level.xx.mapper=debug
 ... DEBUG 92784 --- [           main] ...OrderMapper.update     : ==>  Parameters: N001(String), 8888(Integer), 1(Integer)
 ... DEBUG 92784 --- [           main] ...OrderMapper.update     : <==  Updates: 1
 ````
+
+## 整合 SpringBoot
+
+### mybatis-spring-boot
+
+引入依赖:
+
+```xml
+<dependencies>
+    <dependency>
+        <groupId>org.mybatis.spring.boot</groupId>
+        <artifactId>mybatis-spring-boot-starter</artifactId>
+        <version>2.1.3</version>
+    </dependency>
+</dependencies>
+```
+
+启动类添加 `MapperScan`
+
+```java
+@SpringBootApplication
+@MapperScan("*.*") //扫描指定包下接口
+public class SpringBootMybatisApplication {
+    public static void main(String[] args) {
+        SpringApplication.run(SpringBootMybatisApplication.class, args);
+    }
+}
+```
