--- a/src/memo/tool/系统初始化.md
+++ b/src/memo/tool/系统初始化.md
@@ -11,6 +11,17 @@ sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.
 
 ### 插件
 
+#### zsh-syntax-highlighting
+```shell
+git clone https://github.com/zsh-users/zsh-syntax-highlighting.git $ZSH_CUSTOM/plugins/zsh-syntax-highlighting
+```
+
+#### zsh-autosuggestions
+
+```shell
+git clone https://github.com/zsh-users/zsh-autosuggestions $ZSH_CUSTOM/plugins/zsh-autosuggestions
+```
+
 ## Brew
 
 * [https://brew.sh](https://brew.sh)
@@ -22,4 +33,9 @@ sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.
 ## SDKMAN
 
 ```shell
+curl -s "https://get.sdkman.io" | bash
 ```
+
+## 安装脚本
+
+<<< @/src/memo/tool/install.sh
