--- a/src/patterns/behavior/职责链模式.md
+++ b/src/patterns/behavior/职责链模式.md
@@ -9,94 +9,155 @@ title: '职责链模式'
 为了避免请求发送者与多个请求处理者耦合在一起，将所有请求的处理者通过前一对象记住其下一个对象的引用而连成一条链；
 当有请求发生时，可将请求沿着这条链传递，直到有对象处理它为止
 
-## 结构
+关于责任链模式，其有两种形式:
+* 一种是通过外部调用的方式对链的各个节点调用进行控制，从而进行链的各个节点之间的切换。
+* 一种是链的每个节点自由控制是否继续往下传递链的进度。
 
-![](../../resources/pattern/3-1Q116135Z11C.gif)
-![](../../resources/pattern/3-1Q11613592TF.gif)
+### 适用场景
 
-* 抽象处理者（Handler）角色：定义一个处理请求的接口，包含抽象处理方法和一个后继连接。
-* 具体处理者（Concrete Handler）角色：实现抽象处理者的处理方法，判断能否处理本次请求，如果可以处理请求则处理，否则将该请求转给它的后继者。
-* 客户类（Client）角色：创建处理链，并向链头的具体处理者对象提交请求，它不关心处理细节和请求的传递过程
+1. 多个对象可以处理一个请求，但具体由哪个对象处理该请求在运行时自动确定。
+2. 可动态指定一组对象处理请求，或添加新的处理者。
+3. 需要在不明确指定请求处理者的情况下，向多个处理者中的一个提交请求。
 
-## 实现
+## 内部节点串联
 
 ```java
-package chainOfResponsibility;
-public class ChainOfResponsibilityPattern
-{
-    public static void main(String[] args)
-    {
-        //组装责任链 
-        Handler handler1=new ConcreteHandler1(); 
-        Handler handler2=new ConcreteHandler2(); 
-        handler1.setNext(handler2); 
-        //提交请求 
-        handler1.handleRequest("two");
+public abstract class AbstractLogger {
+    public static int INFO = 1;
+    public static int DEBUG = 2;
+    public static int ERROR = 3;
+
+    public int level;
+
+    private AbstractLogger next;
+
+    public void setNext(AbstractLogger nextLogger) {
+        this.next = nextLogger;
+    }
+
+    private void log(int level, String message) {
+        if (this.level <= level) {
+            write(message);
+        }
+
+        if (Objects.nonNull(next)) {
+            next.log(level, message);
+        }
+    }
+
+    public void info(String message) {
+        log(INFO, message);
+    }
+
+    public void debug(String message) {
+        log(DEBUG, message);
+    }
+
+    protected abstract void write(String message);
+}
+
+class ConsoleLogger extends AbstractLogger {
+    ConsoleLogger() {
+        this.level = DebugLogger.INFO;
+    }
+
+    @Override
+    protected void write(String message) {
+        System.out.println(StrUtil.format("console ==> {}", message));
     }
 }
-//抽象处理者角色
-abstract class Handler
-{
-    private Handler next;
-    public void setNext(Handler next)
-    {
-        this.next=next; 
+
+class DebugLogger extends AbstractLogger {
+    DebugLogger() {
+        this.level = DebugLogger.DEBUG;
     }
-    public Handler getNext()
-    { 
-        return next; 
-    }   
-    //处理请求的方法
-    public abstract void handleRequest(String request);       
+
+    @Override
+    protected void write(String message) {
+        System.out.println(StrUtil.format("debug ==> {}", message));
+    }
 }
-//具体处理者角色1
-class ConcreteHandler1 extends Handler
-{
-    public void handleRequest(String request)
-    {
-        if(request.equals("one")) 
-        {
-            System.out.println("具体处理者1负责处理该请求！");       
-        }
-        else
-        {
-            if(getNext()!=null) 
-            {
-                getNext().handleRequest(request);             
-            }
-            else
-            {
-                System.out.println("没有人处理该请求！");
-            }
-        } 
-    } 
-}
-//具体处理者角色2
-class ConcreteHandler2 extends Handler
-{
-    public void handleRequest(String request)
-    {
-        if(request.equals("two")) 
-        {
-            System.out.println("具体处理者2负责处理该请求！");       
-        }
-        else
-        {
-            if(getNext()!=null) 
-            {
-                getNext().handleRequest(request);             
-            }
-            else
-            {
-                System.out.println("没有人处理该请求！");
-            }
-        } 
+
+class MainLogger {
+    public static void main(String[] args) {
+        AbstractLogger logger = getChain();
+
+        logger.info("11");
+        logger.debug("11");
+    }
+
+    public static AbstractLogger getChain() {
+        // 组装链
+        ConsoleLogger consoleLogger = new ConsoleLogger();
+        DebugLogger debugLogger = new DebugLogger();
+        debugLogger.setNext(consoleLogger);
+
+        return debugLogger;
     }
 }
 ```
 
-输出:
+## 外部调用方式
 
+对于外部控制的方式，这种方式比较简单，链的每个节点只需要专注于各自的逻辑即可，而当前节点调用完成之后是否继续调用下一个节点，这个则由外部控制逻辑进行
+
+```java
+
+interface Filter {
+    // 逻辑操作
+    boolean filter(Task task);
+}
+
+class Task {
+}
+
+class RiskFilter implements Filter {
+    @Override
+    public boolean filter(Task task) {
+        return true;
+    }
+}
+
+class TimesFilter implements Filter {
+
+    @Override
+    public boolean filter(Task task) {
+        return true;
+    }
+}
+
+class DurationFilter implements Filter {
+
+    @Override
+    public boolean filter(Task task) {
+        return true;
+    }
+}
+
+class FilterMain {
+    public static void main(String[] args) {
+        // 责任链
+        List<Filter> list = new ArrayList<>();
+        list.add(new DurationFilter());
+        list.add(new TimesFilter());
+        list.add(new RiskFilter());
+
+        // 数据源
+        Task task = new Task();
+        for (Filter filter : list) {
+            if (!filter.filter(task)) {
+                return;
+            }
+        }
+
+        // to do continue
+    }
+}
 ```
-具体处理者2负责处理该请求！
-```
+
+
+## 扩展
+
+### 与建造者模式结合
+
+[简易权限 Github](https://github.com/wangwei461/code-advanced-way/blob/master/design-pattern/src/main/java/com/example/design/pattern/chain/ChainBuilder.java)
