--- a/src/patterns/behavior/观察者模式.md
+++ b/src/patterns/behavior/观察者模式.md
@@ -6,7 +6,16 @@ title: '观察者模式'
 
 多个对象间存在一对多的依赖关系，当一个对象的状态发生改变时，所有依赖于它的对象都得到通知并被自动更新
 
-## 结构
+### 场景
+
+* 一个抽象模型有两个方面，其中一个方面依赖于另一个方面。将这些方面封装在独立的对象中使它们可以各自独立地改变和复用。
+* 一个对象的改变将导致其他一个或多个对象也发生改变，而不知道具体有多少对象将发生改变，可以降低对象之间的耦合度。
+* 一个对象必须通知其他对象，而并不知道这些对象是谁。
+* 需要在系统中创建一个触发链，A对象的行为将影响B对象，B对象的行为将影响C对象……，可以使用观察者模式创建一种链式触发机制
+
+## 基本模式
+
+### UML
 
 ![](../../resources/pattern/3-1Q1161A6221S.gif)
 
@@ -15,80 +24,212 @@ title: '观察者模式'
 * 抽象观察者（Observer）角色：它是一个抽象类或接口，它包含了一个更新自己的抽象方法，当接到具体主题的更改通知时被调用。
 * 具体观察者（Concrete Observer）角色：实现抽象观察者中定义的抽象方法，以便在得到目标的更改通知时更新自身的状态
 
-## 实现
+
+### 观察者模式
+```java
+abstract class Subject {
+    // 观察者列表
+    private final List<Observer> observers = new ArrayList<>(16);
+    public int state;
+
+    public int getState() {
+        return this.state;
+    }
+
+    public abstract void setAction(int state);
+
+    // 添加观察者
+    public void attach(Observer observer) {
+        this.observers.add(observer);
+    }
+
+    // 删除观察者
+    public void unbind(Observer observer) {
+        this.observers.remove(observer);
+    }
+
+    public List<Observer> getObservers() {
+        return this.observers;
+    }
+
+    // 通知
+    public void notifyObserver() {
+        this.observers.forEach(Observer::update);
+    }
+}
+
+class ConcreteSubject extends Subject {
+    @Override
+    public void setAction(int state) {
+        this.state = state;
+        notifyObserver();
+    }
+}
+
+abstract class Observer {
+    public Subject subject;
+
+    public abstract void update();
+}
+
+class A extends Observer {
+    A(Subject subject) {
+        this.subject = subject;
+        this.subject.attach(this);
+    }
+
+    @Override
+    public void update() {
+        System.out.println("A ==> " + subject.getState());
+    }
+}
+
+class B extends Observer {
+    B(Subject subject) {
+        this.subject = subject;
+        this.subject.attach(this);
+    }
+
+    @Override
+    public void update() {
+        System.out.println("B ==> " + subject.getState());
+    }
+}
+
+class Client {
+    public static void main(String[] args) {
+        // 创建主题
+        Subject subject = new ConcreteSubject();
+
+        // 绑定观察者
+        new A(subject);
+        new B(subject);
+
+        // 更新值
+        subject.setAction(1);
+
+        // 输出: 
+        // A ==> 1
+        // B ==> 1
+    }
+}
+```
+
+## JDK 提供的模式
+
+### JDK 源码
 
 ```java
-public class ObserverPattern
-{
-    public static void main(String[] args)
-    {
-        Subject subject=new ConcreteSubject();
-        Observer obs1=new ConcreteObserver1();
-        Observer obs2=new ConcreteObserver2();
-        subject.add(obs1);
-        subject.add(obs2);
-        subject.notifyObserver();
+import java.util.Observable;
+
+// 一个Observer对象监视着一个Observable对象的变化，当Observable对象发生变化时，Observer得到通知，就可以进行相应的工作
+public interface Observer {
+    void update(Observable o, Object arg);
+}
+
+public class Observable {
+    // 用来设置一个内部标志位注明数据发生了变化
+    private boolean changed = false;
+    private Vector<Observer> obs;
+
+    public Observable() {
+        obs = new Vector<>();
     }
-}
-//抽象目标
-abstract class Subject
-{
-    protected List<Observer> observers=new ArrayList<Observer>();   
-    //增加观察者方法
-    public void add(Observer observer)
-    {
-        observers.add(observer);
-    }    
-    //删除观察者方法
-    public void remove(Observer observer)
-    {
-        observers.remove(observer);
-    }   
-    public abstract void notifyObserver(); //通知观察者方法
-}
-//具体目标
-class ConcreteSubject extends Subject
-{
-    public void notifyObserver()
-    {
-        System.out.println("具体目标发生改变...");
-        System.out.println("--------------");       
-       
-        for(Object obs:observers)
-        {
-            ((Observer)obs).response();
+
+    public synchronized void addObserver(Observer o) {
+        if (o == null)
+            throw new NullPointerException();
+        if (!obs.contains(o)) {
+            obs.addElement(o);
         }
-       
-    }          
-}
-//抽象观察者
-interface Observer
-{
-    void response(); //反应
-}
-//具体观察者1
-class ConcreteObserver1 implements Observer
-{
-    public void response()
-    {
-        System.out.println("具体观察者1作出反应！");
     }
-}
-//具体观察者1
-class ConcreteObserver2 implements Observer
-{
-    public void response()
-    {
-        System.out.println("具体观察者2作出反应！");
+
+    public synchronized void deleteObserver(Observer o) {
+        obs.removeElement(o);
+    }
+
+    // 调用一个列表中所有的Observer的update()方法，通知它们数据发生了变化
+    public void notifyObservers() {
+        notifyObservers(null);
+    }
+
+    public void notifyObservers(Object arg) {
+        Object[] arrLocal;
+
+        synchronized (this) {
+            if (!changed)
+                return;
+            arrLocal = obs.toArray();
+            clearChanged();
+        }
+
+        for (int i = arrLocal.length-1; i>=0; i--)
+            ((Observer)arrLocal[i]).update(this, arg);
+    }
+
+    public synchronized void deleteObservers() {
+        obs.removeAllElements();
+    }
+
+    protected synchronized void setChanged() {
+        changed = true;
+    }
+
+    protected synchronized void clearChanged() {
+        changed = false;
+    }
+
+    public synchronized boolean hasChanged() {
+        return changed;
+    }
+
+    public synchronized int countObservers() {
+        return obs.size();
     }
 }
 ```
 
-输出:
+### 使用
 
-```
-具体目标发生改变...
---------------
-具体观察者1作出反应！
-具体观察者2作出反应！
+```java
+public class JdkObserver {
+    public static void main(String[] args) {
+        // 主题
+        ConcreteJdkSubject subject = new ConcreteJdkSubject();
+
+        // 绑定观察者
+        new JdkA(subject);
+
+        subject.setAction("data");
+    }
+}
+
+class ConcreteJdkSubject extends Observable {
+    private Object data;
+
+    public void setAction(Object data) {
+        this.data = data;
+        setChanged();
+
+        // 有参数
+        notifyObservers(this.data);
+
+        // 无参数
+        notifyObservers();
+    }
+}
+
+// 观察者
+class JdkA implements java.util.Observer {
+
+    JdkA(ConcreteJdkSubject concreteJdkSubject) {
+        concreteJdkSubject.addObserver(this);
+    }
+
+    @Override
+    public void update(Observable o, Object arg) {
+        System.out.println(arg);
+        System.out.println(o.countObservers());
+    }
+}
 ```
