feat: 观察者模式-监听器

--- a/src/patterns/behavior/观察者模式.md
+++ b/src/patterns/behavior/观察者模式.md
@@ -233,3 +233,88 @@ class JdkA implements java.util.Observer {
     }
 }
 ```
+
+## 监听器模式
+
+监听器模式 有三个要素 —— 广播器、事件、监听器
+1. 发布器：用于事件注册和发布
+2. 事件：触发的操作
+3. 监听器：监听器模式的核心，定义事件发生后的动作
+
+```java
+// 抽象事件
+abstract class Event {
+    public Object data;
+
+    public Object getData() {
+        return data;
+    }
+
+    public void setData(Object data) {
+        this.data = data;
+    }
+}
+
+// 自定义的事件
+class EventA extends Event {
+}
+
+class EventB extends Event {
+}
+
+// 监听器
+abstract class Listener {
+    abstract void doWorker(Event event);
+}
+
+class ListenerA extends Listener {
+
+    @Override
+    void doWorker(Event event) {
+        if (event instanceof EventA) {
+            System.out.println("Event A ===> " + event.getData());
+        }
+    }
+}
+
+// 事件发布器
+abstract class Publish {
+    private final List<Listener> listeners = new ArrayList<>(16);
+
+    public void addListener(Listener listener) {
+        this.listeners.add(listener);
+    }
+
+    public void removeListener(Listener listener) {
+        this.listeners.remove(listener);
+    }
+
+    // 发布事件
+    public void publish(Event event) {
+        this.listeners.forEach(a -> a.doWorker(event));
+    }
+}
+
+// 自定义发布器
+class MulticasterPublish extends Publish {
+
+}
+
+public class ListenerEvent {
+    public static void main(String[] args) {
+        // 声明监听器
+        MulticasterPublish multicasterPublish = new MulticasterPublish();
+        multicasterPublish.addListener(new ListenerA());
+
+        // 事件注册和发布
+        EventA eventA = new EventA();
+        eventA.setData("event a");
+        multicasterPublish.publish(eventA);
+
+        EventB eventB = new EventB();
+        eventB.setData("event b");
+        multicasterPublish.publish(eventB);
+    }
+}
+
+```
