--- a/src/patterns/behavior/观察者模式.md
+++ b/src/patterns/behavior/观察者模式.md
@@ -4,7 +4,7 @@ title: '观察者模式'
 
 ## 定义
 
-多个对象间存在一对多的依赖关系，当一个对象的状态发生改变时，所有依赖于它的对象都得到通知并被自动更新
+在对象之间定义一个一对多的依赖，当一个对象状态改变的时候，所有依赖的对象都会自动收到通知
 
 ### 场景
 
