--- a/src/patterns/behavior/状态模式.md
+++ b/src/patterns/behavior/状态模式.md
@@ -16,6 +16,8 @@ title: '状态模式'
 2. 状态模式的结构与实现都较为复杂，如果使用不当会导致程序结构和代码的混乱。
 3. 状态模式对开闭原则的支持并不太好，对于可以切换状态的状态模式，增加新的状态类需要修改那些负责状态转换的源码，否则无法切换到新增状态，而且修改某个状态类的行为也需要修改对应类的源码
 
+> 在行为受状态约束的时候使用状态模式，而且状态不超过 5 个
+
 ## 基本模式
 ### UML
 
