--- a/src/memo/tool/系统初始化.md
+++ b/src/memo/tool/系统初始化.md
@@ -30,6 +30,38 @@ git clone https://github.com/zsh-users/zsh-autosuggestions $ZSH_CUSTOM/plugins/z
 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
 ```
 
+### 源切换
+
+|名称|说明|
+|---|---|
+|brew|	Homebrew 源代码仓库|
+|homebrew-core|	Homebrew 核心软件仓库|
+|homebrew-bottles|	Homebrew 预编译二进制软件包|
+|homebrew-cask|	提供 macOS 应用和大型二进制文件|
+
+### 官方源
+
+```shell
+cd "$(brew --repo)" && git remote -v
+cd "$(brew --repo homebrew/core)" && git remote -v
+cd "$(brew --repo homebrew/cask)" && git remote -v
+
+git -C "$(brew --repo)" remote set-url origin https://github.com/Homebrew/brew.git
+git -C "$(brew --repo homebrew/core)" remote set-url origin https://github.com/Homebrew/homebrew-core.git
+git -C "$(brew --repo homebrew/cask)" remote set-url origin https://github.com/Homebrew/homebrew-cask.git
+brew update
+```
+
+### 清华源
+
+```shell
+git -C "$(brew --repo)" remote set-url origin https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/brew.git
+git -C "$(brew --repo homebrew/core)" remote set-url origin https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/homebrew-core.git
+git -C "$(brew --repo homebrew/cask)" remote set-url origin https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/homebrew-cask.git
+
+# zsh
+export HOMEBREW_BOTTLE_DOMAIN=https://mirrors.tuna.tsinghua.edu.cn/homebrew-bottles
+```
 ## SDKMAN
 
 ```shell
