--- a/src/memo/tool/系统初始化.md
+++ b/src/memo/tool/系统初始化.md
@@ -30,7 +30,7 @@ git clone https://github.com/zsh-users/zsh-autosuggestions $ZSH_CUSTOM/plugins/z
 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
 ```
 
-### 源切换
+### 核心模块
 
 |名称|说明|
 |---|---|
