feat: java icon

--- a/src/patterns/structured/装饰模式.md
+++ b/src/patterns/structured/装饰模式.md
@@ -1,10 +1,27 @@
 ---
-title: '装饰模式'
+title: '装饰器模式'
 ---
 
 ## 定义
 
 装饰模式（Decorator），动态地给一个对象添加一些额外的职责，就增加功能来说，装饰模式比生成子类更灵活
 
-## 结构
-## 实现
+优点:
+* 装饰器是继承的有力补充，比继承灵活，在不改变原有对象的情况下，动态的给一个对象扩展功能，即插即用
+* 通过使用不用装饰类及这些装饰类的排列组合，可以实现不同效果
+* 装饰器模式完全遵守开闭原则
+
+缺点: 装饰器模式会增加许多子类，过度使用会增加程序得复杂性
+
+## 基本模式
+
+### UML
+
+![](../../resources/pattern/3-1Q115142115M2.gif)
+
+1. 抽象构件（Component）角色：定义一个抽象接口以规范准备接收附加责任的对象
+2. 具体构件（ConcreteComponent）角色：实现抽象构件，通过装饰角色为其添加一些职责
+3. 抽象装饰（Decorator）角色：继承抽象构件，并包含具体构件的实例，可以通过其子类扩展具体构件的功能
+4. 具体装饰（ConcreteDecorator）角色：实现抽象装饰的相关方法，并给具体构件对象添加附加的责任
+
+### 实现
