--- a/src/memo/tool/系统初始化.md
+++ b/src/memo/tool/系统初始化.md
@@ -2,6 +2,17 @@
 title: "Mac OS"
 ---
 
+## U 盘镜像
+
+```shell
+## 擦除
+diskutil eraseDisk ExFAT free /dev/disk2
+
+## 烧写镜像
+sudo /Applications/Install\ macOS\ Big\ Sur.app/Contents/Resources/createinstallmedia --volume /Volumes/MyVolume
+
+```
+
 ## ZSH
 * [https://ohmyz.sh](https://ohmyz.sh)
 
