--- a/src/memo/tool/系统初始化.md
+++ b/src/memo/tool/系统初始化.md
@@ -38,7 +38,10 @@ git clone https://github.com/zsh-users/zsh-autosuggestions $ZSH_CUSTOM/plugins/z
 * [https://brew.sh](https://brew.sh)
   
 ```shell
+## 安装
 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+## 卸载
+/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/uninstall.sh)"
 ```
 
 ### 核心模块
